--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ targetCompatibility = 1.7
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 
@@ -31,6 +32,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-ws")
     compile("com.h2database:h2:1.3.148")
+    compile("mysql:mysql-connector-java:5.1.30")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
