--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://mysql01/halloween
-spring.datasource.username=halloween
-spring.datasource.password=passw0rd
-spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://mysql01/halloween
+#spring.datasource.username=halloween
+#spring.datasource.password=passw0rd
+#spring.jpa.hibernate.ddl-auto=create
