--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-01.cleardb.net:3306/ad_35086bd71dd4966
-#spring.datasource.username=bd6b54686d3726
-#spring.datasource.password=d018a378
-#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:
+#spring.datasource.username=
+#spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create
