--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,7 @@ repositories {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-ws")
-    compile("com.h2database:h2:1.3.148")
-    //compile("mysql:mysql-connector-java:5.1.30")
+    compile("mysql:mysql-connector-java:5.1.33")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
