--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        //mavenLocal()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -17,21 +18,24 @@ apply plugin: 'spring-boot'
 
 jar {
     baseName = 'halloweenCounter'
-    version = '0.0.1-SNAPSHOT'
+    version = '0.0.2-SNAPSHOT'
 }
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 repositories {
     mavenCentral()
-    //mavenLocal()
+    mavenLocal()
 }
 
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-ws")
+    compile("org.springframework.cloud:spring-cloud-cloudfoundry-connector:1.1.0.RELEASE")
+    compile("org.springframework.cloud:spring-cloud-spring-service-connector:1.1.0.RELEASE")
     compile("mysql:mysql-connector-java:5.1.33")
+    compile("com.rippmn:upsServiceInfoCreator:0.0.1-SNAPSHOT")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
