--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-ws")
     compile("org.springframework.cloud:spring-cloud-cloudfoundry-connector:1.1.0.RELEASE")
     compile("org.springframework.cloud:spring-cloud-spring-service-connector:1.1.0.RELEASE")
-    compile("mysql:mysql-connector-java:5.1.33")
-    compile("com.rippmn:upsServiceInfoCreator:0.0.1-SNAPSHOT")
+    runtime("mysql:mysql-connector-java:5.1.33")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
