--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.rippmn</groupId>
-	<artifactId>halloween</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>halloweenCounter</artifactId>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>halloween</name>
+	<name>halloweenCounter</name>
 	<description>Halloween treat count </description>
 
 	<parent>
