comment out explicit dialect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 #spring.datasource.username=
 #spring.datasource.password=
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
