--- a/manifest.yml
+++ b/manifest.yml
@@ -5,5 +5,8 @@ applications:
   host: hwtc
   instances: 1
   path: target/halloweenCounter-0.0.3-SNAPSHOT.jar
+  buildpack: java_buildpack
   services:
   - halloweenTC
+  env:
+    DATE_OFFSET: 5
