--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,5 @@
-#spring.datasource.url=
-#spring.datasource.username=
-#spring.datasource.password=
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+#spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 spring.datasource.url=jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
